- Fixed problem with explicit interface specifier.