@@ -17,3 +17,35 @@ Scenario: Explicit interface implementatins conflict for DateTime struct
   When run generator
   Then there must not be generation exception
   And there must not be explicit interface specifier in the generated interface and implementation methods
+
+
+Scenario: Static methods from the System.Object class must not be included
+  Given source declaration
+    """
+    namespace Methods;
+    public class EmptyClass
+    {
+    }
+    """
+  And attribute usage
+    """
+    using Tum4ik.StinimGen.Attributes;
+    using Methods;
+    namespace Attribute.Usage;
+    [IIFor(typeof(EmptyClass), "EmptyClassWrapper")]
+    internal partial interface IEmptyClass { }
+    """
+  When run generator
+  Then there must not be generation exception
+  And generated interface must be
+    """
+    partial interface IEmptyClass
+    {
+    }
+    """
+  And generated implementation must be
+    """
+    internal class EmptyClassWrapper : IEmptyClass
+    {
+    }
+    """
